[package]
name = "aarch64"
version = "0.0.1"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]

homepage = "https://github.com/hermitcore/rust-aarch64"
description = "Rust library to use aarch64 specific functionality and registers"
repository = "https://github.com/hermitcore/rust-aarch64.git"
readme = "README.md"
keywords = ["arm64", "aarch64"]
license = "MIT"

[dependencies]
