[package]
name = "aarch64"
version = "0.0.12"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]

homepage = "https://github.com/hermitcore/rust-aarch64"
description = "Rust library to use aarch64 specific functionality and registers"
repository = "https://github.com/hermitcore/rust-aarch64.git"
documentation = "https://docs.rs/aarch64"
readme = "README.md"
keywords = ["os", "arm64", "aarch64"]
license = "MIT/Apache-2.0"
edition = '2021'
exclude = ["/.gitlab-ci.yml", ".gitignore", ".gitattributes", "/.github/*"]
rust-version = "1.82"

[dependencies]
aarch64-cpu = { version = "9.3" }
memory_addresses = { version = "0.2.0", default-features = false, features = ["aarch64"] }
tock-registers = { version = "0.8.x", default-features = false }
